# ptoxide

./: .gitignore  Cargo.toml  Makefile  README.md  grammar.pest  out.txt
examples/: times_two.rs
kernels/: add.cu  add.ptx  add_simple.cu  add_simple.ptx  copy.cu  copy.ptx  fncall.cu  fncall.ptx  gemm.cu  gemm.ptx  test.cu  times_two.cu  times_two.ptx  transpose.cu  transpose.ptx
src/: ast.rs  compiler.rs  lib.rs  main.rs  vm.rs
src/ast/: lex.rs  mod.rs
src/vm/: mod.rs
tests/: test.rs
