[package]
name = "ptoxide"
version = "0.1.0"
edition = "2021"
description = "A virtual machine to execute CUDA PTX without a GPU"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gvilums/ptoxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
logos = "0.13.0"
thiserror = "1.0.50"
